@@ -1,5 +1,6 @@
 ifeq ($(subdir),string)
 sysdep_routines += memcpy-power7 memcpy-a2 memcpy-power6 memcpy-cell \
 		   memcmp-power7 memset-power4 memset-power6 memset-power7 \
-		   bzero-power4 bzero-power6 bzero-power7
+		   bzero-power4 bzero-power6 bzero-power7 \
+		   strncmp-power7 strncmp-power4
 endif
