@@ -22,7 +22,8 @@
 
 /* int [r3] strncmp (const char *s1 [r3], const char *s2 [r4], size_t size [r5])  */
 
-EALIGN (strncmp, 4, 0)
+	.machine power4
+EALIGN (__strncmp_power4, 4, 0)
 
 #define rTMP	r0
 #define rRTN	r3
@@ -166,5 +167,4 @@ L(u4):	sub	rRTN, rWORD1, rWORD2
 L(ux):
 	li	rRTN, 0
 	blr
-END (strncmp)
-libc_hidden_builtin_def (strncmp)
+END (__strncmp_power4)
